Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_ede_altergo.txt
[kernel] Parsing ede_rte.c (with preprocessing)
[kernel] ede_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing ede.c (with preprocessing)
  3     [kernel:typing:implicit-function-declaration] ede.c:3: Warning:
[kernel] Frama-C aborted: invalid user input.
